--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
