--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "emailjs-com": "^3.2.0",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
