--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "emailjs-com": "^3.2.0",
+    "i18next": "^23.15.1",
     "node-sass": "^9.0.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "react-i18next": "^15.0.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
